apps/giropops-senhas/overlays/dev/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-senhas
spec:
  replicas: 5
