apps/giropops-senhas/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
spec:
  ingressClassName: tailscale

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: giropops-senhas
                port:
                  number: 5000

  tls:
    - hosts:
        - devlabs
